feat: add favicon and implement header
Add site favicon to src/assets directory and complete header implementation:
- Create HTML structure for navigation header
- Add corresponding CSS styling for header components

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,91 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./assets/favicon.png" />
+    <link rel="icon" type="image/png" href="./assets/fav.png" />
     <title>Homepage</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="nav-left">
+        <div class="logo">
+          <div class="logo-part-1">lucho</div>
+          <div class="logo-part-2">deco</div>
+        </div>
+      </div>
+      <div class="nav-menu">
+        <div class="nav-item">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="currentColor"
+          >
+            <path
+              d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
+            />
+          </svg>
+          <p>home</p>
+        </div>
+        <div class="nav-item">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="currentColor"
+          >
+            <path
+              d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
+            />
+          </svg>
+          <p>featured</p>
+        </div>
+        <div class="nav-item">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="currentColor"
+          >
+            <path
+              d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
+            />
+          </svg>
+          <p>projects</p>
+        </div>
+        <div class="nav-item">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="currentColor"
+          >
+            <path
+              d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
+            />
+          </svg>
+          <p>expertise</p>
+        </div>
+        <div class="nav-item">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="currentColor"
+          >
+            <path
+              d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
+            />
+          </svg>
+          <p>contact</p>
+        </div>
+      </div>
+      <div class="nav-right"></div>
+    </header>
     <section class="home"></section>
     <section class="featured-work"></section>
     <section class="work"></section>
