style: update site logo
Modify logo design to improve visual identity

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
     <header>
       <div class="nav-left">
         <div class="logo">
-          <div class="logo-part-1">lucho</div>
-          <div class="logo-part-2">deco</div>
+          <div class="logo-part-1">></div>
+          <div class="logo-part-2">lucho</div>
+          <div class="logo-part-3">deco</div>
+          <div class="logo-part-4">_</div>
         </div>
       </div>
       <div class="nav-menu">
