feat: complete home section
Add styled home section with terminal-themed elements:
- Create greeting with animated typing effect
- Add personal introduction with highlighted elements

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
               d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
             />
           </svg>
-          <p>home</p>
+          <p>about</p>
         </div>
         <div class="nav-item">
           <svg
@@ -90,7 +90,28 @@
       </div>
       <div class="nav-right"></div>
     </header>
-    <section class="home"></section>
+    <section id="home" class="home">
+      <div class="border">
+        <div class="greetings">
+          <div class="bracket">></div>
+          <p class="hello-world">hello, world!</p>
+          <div class="cursor">_</div>
+        </div>
+        <p class="name">I'M LUCHO</p>
+        <p class="description">
+          A <strong>software engineer</strong> and
+          <strong>data scientist</strong> passionate about building
+          <span class="highlight-yellow">end-to-end solutions</span>. With
+          expertise in data sciences, and full-stack web development, I create
+          comprehensive SaaS applications and data-driven services that deliver
+          <span class="highlight-yellow">real value</span>. I specialize in
+          transforming complex data challenges into user-friendly products that
+          <span class="highlight-yellow">solve business problems</span>.
+        </p>
+        <a href="#contact" class="anchor-contact">CONTACT ME</a>
+      </div>
+    </section>
+    <section class="about"></section>
     <section class="featured-work"></section>
     <section class="work"></section>
     <section class="expertise"></section>
