refactor: improve header and color structure
- Replace div elements with semantic nav tags for improved accessibility
- Convert navigation items to proper anchor links with section IDs
- Restructure logo as a clickable link to home section
- Standardize color variable naming (--fg, --bg, --blue, --aqua)
- Remove unnecessary wrapper divs for cleaner HTML structure

--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,13 @@
   </head>
   <body>
     <header>
-      <div class="nav-left">
-        <div class="logo">
-          <div class="logo-part-1">></div>
-          <div class="logo-part-2">lucho</div>
-          <div class="logo-part-3">deco</div>
-          <div class="logo-part-4">_</div>
-        </div>
-      </div>
-      <div class="nav-menu">
-        <div class="nav-item">
+      <a href="#home" class="logo"
+        ><span class="logo-bracket">></span
+        ><span class="logo-name">luchodeco</span
+        ><span class="logo-cursor">_</span></a
+      >
+      <nav class="nav-menu">
+        <a href="#about" class="nav-item">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             height="24px"
@@ -29,9 +26,9 @@
               d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
             />
           </svg>
-          <p>about</p>
-        </div>
-        <div class="nav-item">
+          <span>about</span>
+        </a>
+        <a href="#featured" class="nav-item">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             height="24px"
@@ -43,9 +40,9 @@
               d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
             />
           </svg>
-          <p>featured</p>
-        </div>
-        <div class="nav-item">
+          <span>featured</span>
+        </a>
+        <a href="#projects" class="nav-item">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             height="24px"
@@ -57,9 +54,9 @@
               d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
             />
           </svg>
-          <p>projects</p>
-        </div>
-        <div class="nav-item">
+          <span>projects</span>
+        </a>
+        <a href="#expertise" class="nav-item">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             height="24px"
@@ -71,9 +68,9 @@
               d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
             />
           </svg>
-          <p>expertise</p>
-        </div>
-        <div class="nav-item">
+          <span>expertise</span>
+        </a>
+        <a href="#contact" class="nav-item">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             height="24px"
@@ -85,10 +82,9 @@
               d="M320-240 80-480l240-240 57 57-184 184 183 183-56 56Zm320 0-57-57 184-184-183-183 56-56 240 240-240 240Z"
             />
           </svg>
-          <p>contact</p>
-        </div>
-      </div>
-      <div class="nav-right"></div>
+          <span>contact</span>
+        </a>
+      </nav>
     </header>
     <section id="home" class="home">
       <div class="border">
