feat: add featured section with project showcase
Implement featured section to highlight key projects:
- Create HTML structure for project display with image and description
- Add CSS styling with grid layout and responsive design
- Include PropIntel project as featured case study
- Integrate section into overall page navigation

--- a/src/index.html
+++ b/src/index.html
@@ -515,7 +515,25 @@
         </p>
       </div>
     </section>
-    <section class="featured-work"></section>
+    <section id="featured" class="featured">
+      <img src="./assets/propintel.png" alt="" />
+      <div class="project-description">
+        <div class="title">PropIntel</div>
+        <p class="details">
+          PropIntel is a smart web application that
+          <span class="highlight-yellow">aggregates real estate listings</span>
+          for rentals and sales across multiple platforms. It
+          <span class="highlight-yellow"
+            >enhances this with rich historical data</span
+          >, providing insights into pricing trends, land ownership, property
+          size, and area metrics. By combining real-time listings with long-term
+          data, PropIntel helps users make more
+          <strong>informed decisions</strong> when buying or renting properties.
+          It’s designed for individuals, investors, and analysts who want a
+          clear, <strong>data-driven view of the real estate landscape</strong>.
+        </p>
+      </div>
+    </section>
     <section class="work"></section>
     <section class="contact"></section>
     <footer></footer>
