feat: add projects section with grid layout
Implement projects section to showcase portfolio work:
- Create HTML structure with 6 project cards using placeholder images
- Add CSS grid layout (2x3) with hover effects and styling
- Include project names and responsive card design
- Integrate section into overall page navigation

--- a/src/index.html
+++ b/src/index.html
@@ -534,7 +534,32 @@
         </p>
       </div>
     </section>
-    <section class="work"></section>
+    <section id="projects" class="projects">
+      <div class="project">
+        <img src="./assets/placeholder.png" alt="a placeholder" />
+        <p class="project-name">DataCrate</p>
+      </div>
+      <div class="project">
+        <img src="./assets/placeholder.png" alt="a placeholder" />
+        <p class="project-name">Vizionary</p>
+      </div>
+      <div class="project">
+        <img src="./assets/placeholder.png" alt="a placeholder" />
+        <p class="project-name">TrendFlux</p>
+      </div>
+      <div class="project">
+        <img src="./assets/placeholder.png" alt="a placeholder" />
+        <p class="project-name">InsightNest</p>
+      </div>
+      <div class="project">
+        <img src="./assets/placeholder.png" alt="a placeholder" />
+        <p class="project-name">Corelytics</p>
+      </div>
+      <div class="project">
+        <img src="./assets/placeholder.png" alt="a placeholder" />
+        <p class="project-name">SignalHive</p>
+      </div>
+    </section>
     <section class="contact"></section>
     <footer></footer>
   </body>
