feat: add footer with attribution link

--- a/src/index.html
+++ b/src/index.html
@@ -730,7 +730,17 @@
           <p class="author-company">CTO @ Consto</p>
         </div>
       </div>
+      <footer>
+        <p>
+          Designed & Built by
+          <a
+            href="https://github.com/louisdeco"
+            target="blank"
+            rel="noopener noreferrer"
+            >luchodeco</a
+          >
+        </p>
+      </footer>
     </section>
-    <footer></footer>
   </body>
 </html>
